<resources>
    <string name="app_name">cribapp</string>
    <string name="crib">CRIB</string>
    <string name="buy">Buy</string>
    <string name="rent">Rent</string>
    <string name="landlord">I am a landlord</string>
    <string name="continue_with_facebook">Continue with Facebook</string>
    <string name="create_a_new_account">Create a new account</string>
    <string name="back">backIcon</string>
    <string name="sign_in">Sign In</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="email_address">Email address</string>
    <string name="john_gmail_com">john@gmail.com</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password_mask">**********</string>
    <string name="user_name">User name</string>
    <string name="john_doe">john doe</string>
    <string name="forward">forward</string>
    <string name="show">Show</string>
    <string name="create_new_account">Create new account</string>
    <string name="register">Register</string>
    <string name="logout">Logout</string>
    <string name="search">Search</string>
    <string name="for_you">For You</string>
    <string name="favorites">Favorites</string>
    <string name="alerts">Alerts</string>
    <string name="accounts">Accounts</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_up">Sign Up</string>
    <string name="reset_password">Reset Password</string>
    <string name="add_new_listing">Add New Listing</string>

    <string-array name="states_list">
        <item>Alabama</item>
        <item>Alaska</item>
        <item>American Samoa</item>
        <item>Arizona</item>
        <item>Arkansas</item>
        <item>California</item>
        <item>Colorado</item>
        <item>Connecticut</item>
        <item>Delaware</item>
        <item>District of Columbia</item>
        <item>Florida</item>
        <item>Georgia</item>
        <item>Guam</item>
        <item>Hawaii</item>
        <item>Idaho</item>
        <item>Illinois</item>
        <item>Indiana</item>
        <item>Iowa</item>
        <item>Kansas</item>
        <item>Kentucky</item>
        <item>Louisiana</item>
        <item>Maine</item>
        <item>Maryland</item>
        <item>Massachusetts</item>
        <item>Michigan</item>
        <item>Minnesota</item>
        <item>Mississippi</item>
        <item>Missouri</item>
        <item>Montana</item>
        <item>Nebraska</item>
        <item>Nevada</item>
        <item>New Hampshire</item>
        <item>New Jersey</item>
        <item>New Mexico</item>
        <item>New York</item>
        <item>North Carolina</item>
        <item>North Dakota</item>
        <item>Northern Marianas Islands</item>
        <item>Ohio</item>
        <item>Oklahoma</item>
        <item>Oregon</item>
        <item>Pennsylvania</item>
        <item>Puerto Rico</item>
        <item>Rhode Island</item>
        <item>South Carolina</item>
        <item>South Dakota</item>
        <item>Tennessee</item>
        <item>Texas</item>
        <item>Utah</item>
        <item>Vermont</item>
        <item>Virginia</item>
        <item>Virgin Islands</item>
        <item>Washington</item>
        <item>West Virginia</item>
        <item>Wisconsin</item>
        <item>Wyoming</item>
    </string-array>
</resources>
