<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LoginLogin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".LoginLogin">

    <ImageView
        android:id="@+id/imageViewIconBack"
        android:layout_width="@dimen/icon_size"
        android:layout_height="@dimen/icon_size"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/icon_back"
        tools:ignore="VectorDrawableCompat" />

    <TextView
        android:id="@+id/textViewForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/horizontal_margin"
        android:layout_marginEnd="@dimen/vertical_margin"
        android:layout_marginRight="@dimen/vertical_margin"
        android:text="@string/forgot_password"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/text_size_small"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/imageViewIconBack"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewEmailAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email_address"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/text_size_small"
        app:layout_constraintBottom_toTopOf="@+id/editTextEmailAddress"
        app:layout_constraintEnd_toEndOf="@+id/editTextEmailAddress"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editTextEmailAddress" />

    <EditText
        android:id="@+id/editTextEmailAddress"
        android:layout_width="@dimen/login_button_width_xlarge"
        android:layout_height="@dimen/login_button_height_xlarge"
        android:ems="10"
        android:inputType="textEmailAddress"
        app:backgroundTint="@color/colorWhite"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.40" />

    <TextView
        android:id="@+id/textViewPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/horizontal_margin"
        android:text="@string/password"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/text_size_small"
        app:layout_constraintEnd_toEndOf="@+id/editTextEmailAddress"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editTextEmailAddress"
        app:layout_constraintTop_toBottomOf="@+id/editTextEmailAddress" />

    <TextView
        android:id="@+id/textViewShow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/horizontal_margin"
        android:text="@string/show"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/text_size_small"
        app:layout_constraintEnd_toEndOf="@+id/editTextEmailAddress"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/editTextEmailAddress"
        app:layout_constraintTop_toBottomOf="@+id/editTextEmailAddress" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="@dimen/login_button_width_xlarge"
        android:layout_height="@dimen/login_button_height_xlarge"
        android:ems="10"
        android:inputType="textPassword"
        app:backgroundTint="@color/colorWhite"
        app:layout_constraintEnd_toEndOf="@+id/editTextEmailAddress"
        app:layout_constraintStart_toStartOf="@+id/editTextEmailAddress"
        app:layout_constraintTop_toBottomOf="@+id/textViewPassword" />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/shape_sign_in_button"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintEnd_toEndOf="@+id/editTextPassword"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/editTextPassword"
        app:layout_constraintTop_toBottomOf="@+id/editTextPassword" />

</androidx.constraintlayout.widget.ConstraintLayout>