<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LoginForgotPassword"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".Login.LoginForgotPassword">

    <ImageView
        android:id="@+id/imageViewIconBack"
        android:layout_width="@dimen/icon_size"
        android:layout_height="@dimen/icon_size"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/icon_back"
        tools:ignore="VectorDrawableCompat" />

    <TextView
        android:id="@+id/textViewSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/horizontal_margin"
        android:layout_marginEnd="@dimen/vertical_margin"
        android:text="Sign In"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/text_size_small"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/imageViewIconBack"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/forgot_password"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/text_size_big"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textViewEmail"
        app:layout_constraintEnd_toEndOf="@+id/editTextEmail"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editTextEmail" />

    <TextView
        android:id="@+id/textViewEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email_address"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/text_size_small"
        app:layout_constraintBottom_toTopOf="@+id/editTextEmail"
        app:layout_constraintEnd_toEndOf="@+id/editTextEmail"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editTextEmail" />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="@dimen/login_button_width_xlarge"
        android:layout_height="@dimen/login_button_height_xlarge"
        android:layout_marginStart="31dp"
        android:layout_marginEnd="30dp"
        android:ems="10"
        android:inputType="text"
        app:backgroundTint="@color/colorWhite"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.453" />

    <Button
        android:id="@+id/buttonResetPassword"
        android:layout_width="@dimen/login_button_width_xlarge"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:background="@drawable/shape_sign_in_button"
        android:text="@string/reset_password"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/text_size_small"
        app:layout_constraintEnd_toEndOf="@+id/editTextEmail"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editTextEmail"
        app:layout_constraintTop_toBottomOf="@+id/editTextEmail" />

</androidx.constraintlayout.widget.ConstraintLayout>