<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LoginRegisterOrLogin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".LoginRegisterOrLogin">

    <ImageView
        android:id="@+id/imageViewIconCrib"
        android:layout_width="250dp"
        android:layout_height="125dp"
        android:contentDescription="@string/crib"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.19999999"
        app:srcCompat="@drawable/ic_ger" />

    <TextView
        android:id="@+id/textVIewTitleCrib"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/vertical_margin"
        android:gravity="center"
        android:text="@string/crib"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="115sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/imageViewIconCrib"
        app:layout_constraintStart_toStartOf="@+id/imageViewIconCrib"
        app:layout_constraintTop_toBottomOf="@+id/imageViewIconCrib"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/buttonFacebook"
        android:layout_width="@dimen/login_button_width_large"
        android:layout_height="@dimen/login_button_height"
        android:layout_marginTop="24dp"
        android:background="@drawable/shape_sign_in_button"
        android:text="@string/continue_with_facebook"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textVIewTitleCrib"
        app:layout_constraintStart_toStartOf="@+id/textVIewTitleCrib"
        app:layout_constraintTop_toBottomOf="@+id/textVIewTitleCrib"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/buttonNewAccount"
        android:layout_width="@dimen/login_button_width_large"
        android:layout_height="@dimen/login_button_height"
        android:layout_marginTop="@dimen/vertical_margin"
        android:background="@drawable/shape_sign_in_button"
        android:text="@string/create_a_new_account"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textVIewTitleCrib"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textVIewTitleCrib"
        app:layout_constraintTop_toBottomOf="@+id/buttonFacebook"
        app:layout_constraintVertical_bias="0.015" />

    <ImageView
        android:id="@+id/imageViewIconBack"
        android:layout_width="@dimen/icon_size"
        android:layout_height="@dimen/icon_size"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/icon_back"
        tools:ignore="VectorDrawableCompat" />

    <TextView
        android:id="@+id/textViewLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/horizontal_margin"
        android:layout_marginEnd="@dimen/vertical_margin"
        android:layout_marginRight="@dimen/vertical_margin"
        android:text="@string/login"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/text_size_small"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/imageViewIconBack"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>